--- a/src/Button/Button.mdx
+++ b/src/Button/Button.mdx
@@ -9,7 +9,7 @@ import Button from '../Button'
 
 # Button component
 
-### Basic usage
+## Normal
 
 <Playground>
   <Button type="primary">Button Primary</Button>
@@ -19,7 +19,7 @@ import Button from '../Button'
   <Button>Button Default</Button>
 </Playground>
 
-### Outline
+## Outline
 
 <Playground>
   <Button type="primary" outline={true}>Button Primary</Button>
@@ -29,11 +29,11 @@ import Button from '../Button'
   <Button outline={true}>Button Default</Button>
 </Playground>
 
-### Rounded
+## Rounded
 
 <Playground>
   <Button type="primary" rounded={true}>Button Primary</Button>
 </Playground>
 
-#### Button props
+## Button props
 <Props of={Button}/>
