--- a/src/Input/Input.mdx
+++ b/src/Input/Input.mdx
@@ -9,31 +9,31 @@ import Input from '../Input'
 
 # Input component
 
-### Basic usage
+## Basic usage
 
 <Playground>
   <Input name="my-input" />
 </Playground>
 
-#### Label
+## Label
 
 <Playground>
   <Input label="Input component" name="my-input"/>  
 </Playground>
 
-#### Input with error
+## Input with error
 
 <Playground>
   <Input label="Input component" error={true} name="my-input"/>  
 </Playground>
 
-#### Input required
+## Input required
 
 <Playground>
   <Input required={true} label="Input component" name="my-input"/>  
 </Playground>
 
-#### Size
+## Size
 
 <Playground>
   <Input size="small" placeholder="Input size small" name="my-input"/>
@@ -42,5 +42,5 @@ import Input from '../Input'
 </Playground>
 
 
-#### Input props
+## Input props
 <Props of={Input}/>
